docs/pages/versions/v56.0.0/sdk/ui/swift-ui/overlay.mdx
---
title: 覆盖层
description: 一个 SwiftUI 覆盖层组件，用于在另一个视图上方叠加内容。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvOS', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI Overlay 与官方 SwiftUI [overlay](<https://developer.apple.com/documentation/swiftui/view/overlay(alignment:content:)>) 修饰器相匹配，并提供了一种将辅助内容层叠在视图之上的方式，且可使用指定的对齐方式进行定位。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/overlay/ios-light.webp"
  darkSrc="/static/images/expo-ui/overlay/ios-dark.webp"
  alt="一个铃铛图标，右上角叠加了一个红色的 3 通知徽标"
/>

## 安装

<APIInstallSection />

## 用法

```tsx OverlayExample.tsx
import { Host, Overlay, Text, Image } from '@expo/ui/swift-ui';
import {
  foregroundStyle,
  frame,
  font,
  background,
  clipShape,
  offset,
} from '@expo/ui/swift-ui/modifiers';

export default function OverlayExample() {
  return (
    <Host style={{ flex: 1, justifyContent: 'center', alignItems: 'center' }}>
      <Overlay alignment="topTrailing">
        <Image
          systemName="bell.fill"
          modifiers={[font({ size: 28 }), foregroundStyle('#007AFF')]}
        />
        <Overlay.Content>
          <Text
            modifiers={[
              font({ size: 11, weight: 'bold' }),
              foregroundStyle('#FFFFFF'),
              frame({ width: 18, height: 18 }),
              background('#FF3B30'),
              clipShape('circle'),
              offset({ x: 8, y: -8 }),
            ]}>
            3
          </Text>
        </Overlay.Content>
      </Overlay>
    </Host>
  );
}
```

## API

```tsx
import { Overlay } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/overlay" apiName="Overlay" />
